--- a/index.html
+++ b/index.html
@@ -2256,7 +2256,7 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
         // ⚠️ ЗАМЕНИТЕ НА СВОИ ДАННЫЕ с emailjs.com (бесплатно)
         // Инструкция: https://www.emailjs.com/docs/tutorial/overview/
         const EMAILJS_PUBLIC_KEY  = 'GekBvpWazW6ogvM3_';   // Account → API Keys
-        const EMAILJS_SERVICE_ID  = 'service_oppbreh';           // Email Services
+        const EMAILJS_SERVICE_ID  = 'service_2j4ldbe';           // Email Services
         const EMAILJS_VERIFY_TPL  = 'template_htad8aq';   // Email Templates (подтверждение)
         const EMAILJS_RESET_TPL   = 'template_rxtcd4f';    // Email Templates (сброс пароля)
         const SITE_URL = 'https://mcearthproject.qzz.io';        // URL вашего сайта
