--- a/index.html
+++ b/index.html
@@ -4150,7 +4150,7 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
-        const SUPABASE_URL = 'https://sqlylxcnoqehorlgmztm.supabase.co';
+        const SUPABASE_URL = 'https://cdn.mcearthproject.qzz.io';
 
         function iconUrl(filename) {
             return `${SUPABASE_URL}/storage/v1/object/public/icons/icon/${filename}`;
