--- a/index.html
+++ b/index.html
@@ -2925,8 +2925,8 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
                 </p>
                 <p>
                     <strong data-ru="Reddit сообщество:" data-en="Reddit Community:">Reddit сообщество:</strong><br>
-                    <a href="https://reddit.com/r/ProjectEarth" target="_blank" style="color: #FF4500;">
-                        <i class="fab fa-reddit-alien"></i> r/ProjectEarth
+                    <a href="https://reddit.com/r/Minecraft_Earth" target="_blank" style="color: #FF4500;">
+                        <i class="fab fa-reddit-alien"></i> r/Minecraft_Earth
                     </a>
                 </p>
                 <p style="margin-top: 15px;">
