--- a/index.html
+++ b/index.html
@@ -3115,7 +3115,7 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
             <button class="nav-tab active" onclick="switchTab('home')" data-ru="Главная" data-en="Home"><span class="nav-icon"><img src="shop_icon.png" alt="Home"></span><span data-ru="Главная" data-en="Home">Главная</span></button>
             <button class="nav-tab" onclick="switchTab('news')" data-ru="Новости" data-en="News"><span class="nav-icon"><img src="journal_icon.png" alt="News"></span><span data-ru="Новости" data-en="News">Новости</span></button>
             <button class="nav-tab" onclick="switchTab('buildplates')" data-ru="Buildplates" data-en="Buildplates"><span class="nav-icon"><img src="buildplate_icon.png" alt="Buildplates"></span><span data-ru="Buildplates" data-en="Buildplates">Buildplates</span></button>
-            <button class="nav-tab" onclick="switchTab('gallery')" data-ru="Галерея" data-en="Gallery"><span class="nav-icon"><img src="paint_item.png" alt="Gallery"></span><span data-ru="Галерея" data-en="Gallery">Галерея</span></button>
+            <button class="nav-tab" id="gallery-nav-tab" onclick="switchTab('gallery')" data-ru="Галерея" data-en="Gallery" style="border-right:3px solid #8b7355;border-radius:0 4px 0 0;"><span class="nav-icon"><img src="paint_item.png" alt="Gallery"></span><span data-ru="Галерея" data-en="Gallery">Галерея</span></button>
             <button class="nav-tab" id="reports-nav-tab" onclick="switchTab('reports')" data-ru="Жалобы" data-en="Reports" style="display:none;"><span class="nav-icon"><img src="settings_icon.png" alt="Reports"></span><span data-ru="Жалобы" data-en="Reports">Жалобы</span></button>
         </div>
 
@@ -3734,7 +3734,7 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
                             </div>
                         </div>
 
-                        <div id="gallery-status" style="margin:8px 0;font-family:Minecraft,sans-serif;font-size:0.85rem;font-weight:700;min-height:20px;"></div>
+                        <div id="gallery-status" style="font-family:Minecraft,sans-serif;font-size:0.85rem;font-weight:700;"></div>
                         <button class="bp-submit-btn" id="gallery-submit-btn" onclick="uploadGalleryPhoto()">
                             <i class="fas fa-upload"></i>
                             <span data-ru="Опубликовать фото" data-en="Publish photo">Опубликовать фото</span>
@@ -5420,7 +5420,12 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
 
             checkNewsAdmin().then(isAdm => {
                 const rTab = document.getElementById('reports-nav-tab');
+                const gTab = document.getElementById('gallery-nav-tab');
                 if (rTab) rTab.style.display = isAdm ? '' : 'none';
+                if (gTab) {
+                    gTab.style.borderRight = isAdm ? 'none' : '3px solid #8b7355';
+                    gTab.style.borderRadius = isAdm ? '0' : '0 4px 0 0';
+                }
             });
 
             if (_bpAllData && _bpAllData.length > 0) applyBpFilters();
@@ -5470,6 +5475,8 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
             localStorage.removeItem('bp_session');
             const rTab = document.getElementById('reports-nav-tab');
             if (rTab) rTab.style.display = 'none';
+            const gTab = document.getElementById('gallery-nav-tab');
+            if (gTab) { gTab.style.borderRight = '3px solid #8b7355'; gTab.style.borderRadius = '0 4px 0 0'; }
             const refBlock = document.getElementById('ref-profile-block');
             if (refBlock) refBlock.style.display = 'none';
             const limitPanel = document.getElementById('bp-daily-limit');
