--- a/index.html
+++ b/index.html
@@ -1158,6 +1158,10 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
             border-bottom-color: #3a3a3a;
         }
 
+        body.dark-theme .nav-tabs-reports-row {
+            border-color: #3a3a3a;
+        }
+
         body.dark-theme .nav-tab {
             color: #e0e0e0;
             background: #1a1a1a;
