--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@ survival game, building game, crafting game,ar, minecraft texture, block game">
 
         body.dark-theme .info-note {
             background: #1a1a1a;
-            border-left-color: #81c784;
+            border-color: #3a3a3a;
+            box-shadow: none;
         }
 
         body.dark-theme .info-note i {
